--- a/html/detail.html
+++ b/html/detail.html
@@ -24,14 +24,14 @@
                     <li><a href="./aboutus.html">about us</a></li>
                 </ul>
             </div>
-            <div class="btn btn-booknow btn-medium">
+            <div class="btn btn-booknow btn-medium btn">
                 <a href="./booknow.html">BOOK NOW</a>
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
 
             <div class="page__menu--icon-menu ">
@@ -47,7 +47,9 @@
                     <img src="/img/Detail/1e_Hue.jpg" alt="" title="Đại Nội Huế">
                 </div>
                 <div class="page__content--book part--right">
-                    <div class="content__book--price"><p>700$</p></div>
+                    <div class="content__book--price">
+                        <p>700$</p>
+                    </div>
                     <div class="content__book--inf">
                         <input type="text" placeholder="Name">
                         <input type="text" placeholder="Surname">
@@ -58,7 +60,9 @@
                     </div>
                     <div class="content__book--infphone"><input type="text" placeholder="Phone"></div>
                     <div class=""><textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea></div>
-                    <div class="content__book--send"><p>Send now</p></div>
+                    <div class="content__book--send">
+                        <p>Send now</p>
+                    </div>
                 </div>
             </div>
 
@@ -122,11 +126,12 @@
                                     $700
                                 </div>
                             </div>
-    
-                            <p class="title-script">Nằm ngay bên bờ sông Hương thơ mộng, Đại nội Huế là một quần thế di tích văn hoá được công nhận là di tích văn hoá thế giới. Địa điểm du lịch này hội tụ các nét đẹp kiến trúc đỉnh cao của thời đại phong kiến nhà Nguyễn, được xây
-                                dựng cách đây hàng trăm năm với diện tích vô cùng đồ sộ, có hơn 100 công trình kiến trúc lộng lẫy như: Ngọ Môn, Cung Diên Thọ, Tử Cấm Thành, Điện Thái Hòa được bố trí hài hòa, hợp lý.</p>
+
+                            <p class="title-script">Nằm ngay bên bờ sông Hương thơ mộng, Đại nội Huế là một quần thế di tích văn hoá được công nhận là di tích văn hoá thế giới. Địa điểm du lịch này hội tụ các nét đẹp kiến trúc đỉnh cao của thời đại phong kiến nhà Nguyễn, được
+                                xây dựng cách đây hàng trăm năm với diện tích vô cùng đồ sộ, có hơn 100 công trình kiến trúc lộng lẫy như: Ngọ Môn, Cung Diên Thọ, Tử Cấm Thành, Điện Thái Hòa được bố trí hài hòa, hợp lý.</p>
                         </div>
-                        <div class="btn-detail btn-medium">Details</div>
+                        <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
+                        </div>
                     </div>
                     <div class="tour--item">
                         item2
@@ -136,7 +141,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
         <div class="page__footer">
             <div class="page__footer--left">
@@ -164,19 +169,19 @@
                 <div class="footer--right--menu">
                     <ul class="flexrow">
                         <li>
-                            <a href="">About us</a>
+                            <a href="./aboutus.html">About us</a>
                         </li>
                         <li>
-                            <a href="">Tour</a>
+                            <a href="./tour.html">Tour</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="">Provision</a>
+                            <a href="./provision.html">Provision</a>
                         </li>
                         <li>
-                            <a href="">Security</a>
+                            <a href="./security.html">Security</a>
                         </li>
                     </ul>
                 </div>
