--- a/html/provision.html
+++ b/html/provision.html
@@ -29,11 +29,10 @@
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
-
             <div class="page__menu--icon-menu ">
                 <a href="#"><i class="fas fa-align-justify"></i></a>
             </div>
@@ -41,6 +40,7 @@
 
         <div class="page__content">
             <div class="page__content--content">
+                <p>Provision</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis soluta nam impedit vero laudantium consectetur facere facilis id eius sapiente, nulla repellendus quasi adipisci minus necessitatibus eos vitae ex cupiditate?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, nemo voluptates soluta tempora at hic aut maiores omnis tempore quis voluptas! Veritatis suscipit ad saepe necessitatibus corrupti magni eos magnam.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut amet eligendi quidem dolorem facilis aspernatur, mollitia cum suscipit repellat quasi quaerat explicabo repudiandae? Atque vitae doloremque autem consequatur voluptate voluptates.</p>
@@ -73,19 +73,19 @@
                 <div class="footer--right--menu">
                     <ul class="flexrow">
                         <li>
-                            <a href="">About us</a>
+                            <a href="./aboutus.html">About us</a>
                         </li>
                         <li>
-                            <a href="">Tour</a>
+                            <a href="./tour.html">Tour</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="">Provision</a>
+                            <a href="./provision.html">Provision</a>
                         </li>
                         <li>
-                            <a href="">Security</a>
+                            <a href="./security.html">Security</a>
                         </li>
                     </ul>
                 </div>
@@ -99,4 +99,5 @@
         </div>
     </div>
 </body>
+
 </html>
