--- a/html/review.html
+++ b/html/review.html
@@ -29,9 +29,9 @@
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
 
             <div class="page__menu--icon-menu ">
@@ -60,7 +60,7 @@
                             <p>Vũng Tàu</p>
                         </div>
                     </div>
-                </div>    
+                </div>
             </div>
             <h2>REVIEWS FROM CUSTOMER</h2>
             <div class="page__content--section p2--review">
@@ -102,19 +102,19 @@
                 <div class="footer--right--menu">
                     <ul class="flexrow">
                         <li>
-                            <a href="">About us</a>
+                            <a href="./aboutus.html">About us</a>
                         </li>
                         <li>
-                            <a href="">Tour</a>
+                            <a href="./tour.html">Tour</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="">Provision</a>
+                            <a href="./provision.html">Provision</a>
                         </li>
                         <li>
-                            <a href="">Security</a>
+                            <a href="./security.html">Security</a>
                         </li>
                     </ul>
                 </div>
