--- a/html/review_sample.html
+++ b/html/review_sample.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!--<div id="SaPa">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, esse. Quisquam quidem illo asperiores quis odio cumque placeat expedita doloremque ducimus! Nisi cupiditate dolorum quo impedit ipsa dolores veniam reiciendis!</p>
@@ -23,11 +25,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis pariatur tempore vero rerum consequuntur culpa explicabo facere doloremque saepe nulla quisquam corporis error fugit perspiciatis obcaecati voluptas autem, tempora non?</p>
     </div>-->
     <div id="HaLong">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, saepe non. Deleniti magnam ratione dolorum. Vero nisi unde placeat explicabo ex, vel debitis consequuntur voluptas molestias esse alias fugit reiciendis!</p>
+        <p>Ha Long Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, saepe non. Deleniti magnam ratione dolorum. Vero nisi unde placeat explicabo ex, vel debitis consequuntur voluptas molestias esse alias fugit reiciendis!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique velit illum sapiente voluptatum? Illum accusamus, laborum odit, culpa perspiciatis ea quis tenetur odio sequi esse pariatur adipisci, expedita sit voluptatibus!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, amet deleniti. Eaque, reprehenderit. Ullam ea voluptates asperiores. Amet dicta sequi possimus quibusdam. Illum quisquam vero minima. Velit nesciunt veritatis tempora!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni quia voluptate beatae, eligendi ex corrupti dolorum enim saepe fugit suscipit error minus. Sapiente, fugiat cum quas sequi dolorum ratione porro!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe vel non aspernatur consectetur minus fugit adipisci, labore ratione a. Expedita doloribus quos iusto a quas perferendis maiores molestiae fugiat nostrum.</p>
     </div>
 </body>
+
 </html>
