--- a/html/signin_email.html
+++ b/html/signin_email.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
+
 <body>
     <div class="register_page page">
         <div class="page__menu flexrow">
@@ -27,9 +29,9 @@
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
 
             <div class="page__menu--icon-menu ">
@@ -40,34 +42,40 @@
         <div class="page__content">
             <div class="form__option">
                 <ul>
-                    <div><li><a href="">Email</a></li></div>
-                    <div><li><a href="/html/signin_phone.html">Di động</a></li></div>
+                    <div>
+                        <li><a href="">Email</a></li>
+                    </div>
+                    <div>
+                        <li><a href="/html/signin_phone.html">Di động</a></li>
+                    </div>
                 </ul>
                 <h3>Đăng nhập với EIV</h3>
                 <form action="#">
                     <div class="form_row">
                         <label class="form__label" for="email">Email</label>
-                        <input class="form__input" type="text"
-                    id="email" placeholder="Email">
+                        <input class="form__input" type="text" id="email" placeholder="Email">
                     </div>
                     <div class="form_row">
                         <label class="form__label" for="pass">Mật khẩu</label>
-                        <input class="form__input" type="text"
-                    id="pass" placeholder="Mật khẩu">
+                        <input class="form__input" type="text" id="pass" placeholder="Mật khẩu">
                     </div>
                     <div class="form_row other">
-                        <div><p><a href="">Tạo tài khoản mới</a></p></div>
-                        <div><p><a href="">Quên mật khẩu?</a></p></div>
+                        <div>
+                            <p><a href="">Tạo tài khoản mới</a></p>
+                        </div>
+                        <div>
+                            <p><a href="">Quên mật khẩu?</a></p>
+                        </div>
                     </div>
                     <div class="form_row verify">
-                        <input class="form__button" type="submit" name="submit" value="Đăng nhập"> 
+                        <input class="form__button" type="submit" name="submit" value="Đăng nhập">
                     </div>
                     <p>hoặc tiếp tục với</p>
                     <div class="link__other">
                         <div class="GG__link">
                             <a href="">
                                 <img src="/img/Detail/GGLogo.png" alt="">
-                                <p>Google</p> 
+                                <p>Google</p>
                             </a>
                         </div>
                         <div class="FB__link">
@@ -107,19 +115,19 @@
                 <div class="footer--right--menu">
                     <ul class="flexrow">
                         <li>
-                            <a href="">About us</a>
+                            <a href="./aboutus.html">About us</a>
                         </li>
                         <li>
-                            <a href="">Tour</a>
+                            <a href="./tour.html">Tour</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="">Provision</a>
+                            <a href="./provision.html">Provision</a>
                         </li>
                         <li>
-                            <a href="">Security</a>
+                            <a href="./security.html">Security</a>
                         </li>
                     </ul>
                 </div>
@@ -133,4 +141,5 @@
         </div>
     </div>
 </body>
+
 </html>
