--- a/html/booknow.html
+++ b/html/booknow.html
@@ -29,9 +29,9 @@
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
 
             <div class="page__menu--icon-menu ">
@@ -85,11 +85,89 @@
                 </div>
             </div>
         </div>
-        <div class="page__partner">
-            logo partners
+        <div class="page__partner flexrow">
+            <div class="plane ">
+                <p class="text-center">PARTNER PLANE</p>
+                <div class="flexrow partners-logo">
+                    <img src="/img/logo_partners/1.png" alt="">
+                    <img src="/img/logo_partners/2.png" alt="">
+                    <img src="/img/logo_partners/3.png" alt="">
+                    <img src="/img/logo_partners/4.png" alt="">
+                    <img src="/img/logo_partners/5.png" alt="">
+                </div>
+
+            </div>
+            <div class="hotel">
+                <p class="text-center">PARTNER HOTEL</p>
+                <div class="flexrow partners-logo">
+                    <img src="/img/logo_partners/6.png" alt="">
+                    <img src="/img/logo_partners/7.jpeg" alt="">
+                    <img src="/img/logo_partners/8.png" alt="">
+                    <img src="/img/logo_partners/9.png" alt="">
+                    <img src="/img/logo_partners/10.png" alt="">
+                </div>
+            </div>
+            <div class="payment">
+                <p class="text-center">PARTNER PAYMENT</p>
+                <div class="flexrow partners-logo">
+                    <img src="/img/logo_partners/11.png" alt="">
+                    <img src="/img/logo_partners/12.png" alt="">
+                    <img src="/img/logo_partners/13.png" alt="">
+                    <img src="/img/logo_partners/14.png" alt="">
+                    <img src="/img/logo_partners/15.png" alt="">
+                </div>
+            </div>
         </div>
+
         <div class="page__footer">
-            footer
+            <div class="page__footer--left">
+                <h2 class="text-center">Travel with us</h2>
+                <img src="/img/logo.png" alt="">
+                <div class="footer-icon-contact">
+                    <a href="">
+                        <i class="fab fa-facebook footer-icon"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-instagram footer-icon"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-youtube footer-icon"></i>
+                    </a>
+                    <a href="">
+                        <i class="fas fa-envelope footer-icon"></i>
+                    </a>
+                    <a href="">
+                        <i class="fab fa-twitter footer-icon"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="page__footer--right">
+                <div class="footer--right--menu">
+                    <ul class="flexrow">
+                        <li>
+                            <a href="./aboutus.html">About us</a>
+                        </li>
+                        <li>
+                            <a href="./tour.html">Tour</a>
+                        </li>
+                        <li>
+                            <a href="#">Contact</a>
+                        </li>
+                        <li>
+                            <a href="./provision.html">Provision</a>
+                        </li>
+                        <li>
+                            <a href="./security.html">Security</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer--information">
+                    <p>Địa chỉ: Lầu 2, 3 và 7, Tòa nhà An Phú Plaza, 117-119 Lý Chính Thắng, Phường 7, Quận 3, Tp. Hồ Chí Minh, Việt Nam</p>
+                    <p>Là công ty du lịch trực tuyến hàng đầu Đông Nam Á, EIV đáp ứng đa dạng các nhu cầu du lịch trên cùng một nền tảng, giúp khách hàng có được những chuyến du lịch tuyệt vời với người thân yêu.</p>
+                    <p style="font-family: 'Courier New', Courier, monospace; margin-top: 30px;">The every where in Vina</p>
+                </div>
+                <p style="color: white; font-style: italic; font-size: 15px; margin-top: var(--space);">@Copyright Group6_VIA</p>
+            </div>
         </div>
     </div>
 </body>
