--- a/html/home_index.html
+++ b/html/home_index.html
@@ -29,9 +29,9 @@
             </div>
             <div class="page__menu--icon flexrow">
                 <div class="btn-signin icon">
-                    <a href="#"><i class="far fa-user-circle"></i> Sign in</a>
+                    <a href="/html/signin_email.html"><i class="far fa-user-circle"></i> Sign in</a>
                 </div>
-                <div class="btn-register icon"><a href="#"><i class="far fa-edit"></i> Register</a></div>
+                <div class="btn-register icon"><a href="/html/register_email.html"><i class="far fa-edit"></i> Register</a></div>
             </div>
 
             <div class="page__menu--icon-menu ">
@@ -62,8 +62,7 @@
                         <p class="title-script">Nằm ngay bên bờ sông Hương thơ mộng, Đại nội Huế là một quần thế di tích văn hoá được công nhận là di tích văn hoá thế giới. Địa điểm du lịch này hội tụ các nét đẹp kiến trúc đỉnh cao của thời đại phong kiến nhà Nguyễn, được xây
                             dựng cách đây hàng trăm năm với diện tích vô cùng đồ sộ, có hơn 100 công trình kiến trúc lộng lẫy như: Ngọ Môn, Cung Diên Thọ, Tử Cấm Thành, Điện Thái Hòa được bố trí hài hòa, hợp lý.</p>
                     </div>
-                    <div class="btn-detail btn-medium">Details
-
+                    <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
                 </div>
                 <div class="tour--item">2</div>
@@ -143,19 +142,19 @@
                 <div class="footer--right--menu">
                     <ul class="flexrow">
                         <li>
-                            <a href="">About us</a>
+                            <a href="./aboutus.html">About us</a>
                         </li>
                         <li>
-                            <a href="">Tour</a>
+                            <a href="./tour.html">Tour</a>
                         </li>
                         <li>
-                            <a href="">Contact</a>
+                            <a href="#">Contact</a>
                         </li>
                         <li>
-                            <a href="">Provision</a>
+                            <a href="./provision.html">Provision</a>
                         </li>
                         <li>
-                            <a href="">Security</a>
+                            <a href="./security.html">Security</a>
                         </li>
                     </ul>
                 </div>
