--- a/html/signin_email.html
+++ b/html/signin_email.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="form_row other">
                         <div>
-                            <p><a href="">Tạo tài khoản mới</a></p>
+                            <p><a href="./signin_email.html">Tạo tài khoản mới</a></p>
                         </div>
                         <div>
                             <p><a href="">Quên mật khẩu?</a></p>
