--- a/html/signin_phone.html
+++ b/html/signin_phone.html
@@ -59,6 +59,15 @@
                         <label class="form__label" for="pass">Mật khẩu</label>
                         <input class="form__input" type="text" id="pass" placeholder="Mật khẩu">
                     </div>
+
+                    <div class="form_row other">
+                        <div>
+                            <p><a href="./signin_email.html">Tạo tài khoản mới</a></p>
+                        </div>
+                        <div>
+                            <p><a href="">Quên mật khẩu?</a></p>
+                        </div>
+                    </div>
                     <div class="form_row verify">
                         <input class="form__button" type="submit" name="submit" value="Đăng nhập">
                     </div>
