--- a/html/home_index.html
+++ b/html/home_index.html
@@ -65,6 +65,27 @@
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
                 </div>
+                <div class="tour--item">
+                    <div class="tour--item-pic">
+                        <img src="/img/1a_hue.jpg" alt="">
+                    </div>
+                    <div class="tour--item--content">
+                        <div class="middle--item-content flexrow">
+                            <div class="tour--item--content--left">
+                                <p class="title text-center">Đại nội Huế</p>
+                                <p class="title_province text-center"><i class="fas fa-map-pin" style="color: brown;"></i> Huế</p>
+                            </div>
+                            <div class="tour--item--content--right price">
+                                $700
+                            </div>
+                        </div>
+
+                        <p class="title-script">Nằm ngay bên bờ sông Hương thơ mộng, Đại nội Huế là một quần thế di tích văn hoá được công nhận là di tích văn hoá thế giới. Địa điểm du lịch này hội tụ các nét đẹp kiến trúc đỉnh cao của thời đại phong kiến nhà Nguyễn, được xây
+                            dựng cách đây hàng trăm năm với diện tích vô cùng đồ sộ, có hơn 100 công trình kiến trúc lộng lẫy như: Ngọ Môn, Cung Diên Thọ, Tử Cấm Thành, Điện Thái Hòa được bố trí hài hòa, hợp lý.</p>
+                    </div>
+                    <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
+                    </div>
+                </div>
                 <div class="tour--item">2</div>
                 <div class="tour--item">3</div>
                 <div class="tour--item">4</div>
