--- a/html/provision.html
+++ b/html/provision.html
@@ -40,10 +40,54 @@
 
         <div class="page__content">
             <div class="page__content--content">
-                <p>Provision</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis soluta nam impedit vero laudantium consectetur facere facilis id eius sapiente, nulla repellendus quasi adipisci minus necessitatibus eos vitae ex cupiditate?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, nemo voluptates soluta tempora at hic aut maiores omnis tempore quis voluptas! Veritatis suscipit ad saepe necessitatibus corrupti magni eos magnam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut amet eligendi quidem dolorem facilis aspernatur, mollitia cum suscipit repellat quasi quaerat explicabo repudiandae? Atque vitae doloremque autem consequatur voluptate voluptates.</p>
+                <h2>Chính sách: “Đảm bảo giá tốt nhất”</h2>
+                <ol>
+                    <li>"Đảm bảo Giá Tốt nhất" của chúng tôi chỉ áp dụng cho các đặt tour đã được xác nhận.</li>
+                    <li>“Đảm bảo giá tốt nhất” không áp dụng cho các đặt chỗ cung cấp phần thưởng chương trình khách hàng thân thiết của bên thứ ba, bao gồm đổi dặm bay thường xuyên hoặc các mức giá chưa được công bố như:
+                        <ul>
+                            <li>Giá riêng</li>
+                            <li>Giá đóng gói</li>
+                            <li>Phòng khách sạn được bán như một phần của gói du lịch</li>
+                            <li>Các mức giá không áp dụng cho công chúng, bao gồm:</li>
+                        </ul>
+                    </li>
+                    <li>EIV có quyền và toàn quyền quyết định tính hợp lệ của bất kỳ yêu cầu nào, bao gồm nhưng không giới hạn, xác định rằng đó là cho cùng một tài sản, loại phòng hoặc ngày tháng và nó đáp ứng tất cả các điều khoản, điều kiện và yêu cầu xử lý khiếu nại.</li>
+                    <li>“Đảm bảo Giá Tốt nhất” của chúng tôi không được kết hợp với các ưu đãi hoặc khuyến mãi khác.</li>
+                    <li>EIV có quyền sửa đổi, điều chỉnh, bổ sung, đình chỉ hoặc chấm dứt “Đảm bảo Giá Tốt nhất” bất cứ lúc nào.Bất kỳ câu hỏi nào liên quan đến khiếu nại phải được chuyển đến nhóm Dịch vụ Khách hàng của chúng tôi.</li>
+                </ol>
+                <h2>Chính sách đăng ký và hủy tour:</h2>
+                <ol>
+                    <li>Đối với tour có vé máy bay
+                        <ul>
+                            <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
+                            <li>Đợt 2: Thanh toán tổng số tiền tour còn lại sau khi booking vé máy bay.
+                                <ul>
+                                    <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour + tiền vé máy bay.</Li>
+                                    <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour + tiền vé máy bay.</Li>
+                                    <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour + tiền vé máy bay.</Li>
+                                    <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
+                                    <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
+                                    <Li> Quý khách hủy tour sẽ bị phạt 100% vé máy bay</Li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>Đối với tour không có vé máy bay
+                        <ul>
+                            <li>Đợt 1: Đặt cọc 50% tiền tour/khách ngay khi đăng ký tour.</li>
+                            <li>Đợt 2: Thanh toán tổng số tiền tour còn lại trước ngày đi 10 ngày.
+                                <ul>
+                                    <Li>Hủy tour trước ngày khởi hành 10 ngày, chi phí không hoàn lại là 50% giá tour.</Li>
+                                    <Li>Hủy tour trước ngày khởi hành 5 ngày, chi phí không hoàn lại là 70% giá tour.</Li>
+                                    <Li>Hủy tour trước ngày khởi hành 3 ngày, chi phí không hoàn lại là 90% giá tour</Li>
+                                    <Li>Hủy tour trong vòng 48 giờ trước ngày khởi hành, chi phí không hoàn lại là 100%.</Li>
+                                    <Li>Thời gian hủy tour được tính cho ngày làm việc, không tính thứ bảy, chủ nhật và các ngày Lễ, Tết.</Li>
+                                    <Li>Nếu khách có nhu cầu đổi ngày, công ty sẽ kiểm tra ngày và báo chi phí đổi tùy vào thời điểm đặt tour trong năm.</Li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ol>
             </div>
         </div>
 
