--- a/html/home_index.html
+++ b/html/home_index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="home_page page">
+
         <div class="page__menu flexrow">
             <div class="page__menu--logo">
                 <img src="../img/logo.png" alt="">
@@ -24,6 +25,11 @@
                     <li><a href="./aboutus.html">about us</a></li>
                 </ul>
             </div>
+            <!-- btn search
+                <div class="btn-search flexrow">
+                <input type="text" class="input-search " placeholder="Bạn tìm gì..." name="key" class="fas fa-search">
+                <span class="fas fa-search"></span>
+            </div> -->
             <div class="btn btn-booknow btn-medium">
                 <a href="./booknow.html">BOOK NOW</a>
             </div>
@@ -38,8 +44,10 @@
                 <a href="#"><i class="fas fa-align-justify"></i></a>
             </div>
         </div>
+
         <div class="page--slide">
             <img src="/img/img1.jpg" alt="">
+
         </div>
         <div class="page__content">
             <h2 class="title">BEST PACKAGES</h2>
@@ -65,6 +73,7 @@
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
                 </div>
+
                 <div class="tour--item">
                     <div class="tour--item-pic">
                         <img src="/img/home/7b_NhaTrang.png" alt="">
@@ -80,11 +89,13 @@
                             </div>
                         </div>
 
-                        <p class="title-script"> Đến với Nha Trang Bạn có thể đắm mình trong làn nước xanh ngắt, vùi mình trong bãi cát mịn, đi dạo dọc bờ biển ,nằm dài trên cát nghe tiếng sóng xô bờ hay có những giây phút nhìn ngắm bình minh, hoàng hôn đẹp đến ngỡ ngàng, những hoạt động vui chơi giải trí thú vị, hấp dẫn ngay tại bãi biển đang chờ bạn thử khám phá, sẽ giúp bạn có những giây phút thư giãn tuyệt vời</p>
+                        <p class="title-script"> Đến với Nha Trang Bạn có thể đắm mình trong làn nước xanh ngắt, vùi mình trong bãi cát mịn, đi dạo dọc bờ biển ,nằm dài trên cát nghe tiếng sóng xô bờ hay có những giây phút nhìn ngắm bình minh, hoàng hôn đẹp đến ngỡ ngàng, những
+                            hoạt động vui chơi giải trí thú vị, hấp dẫn ngay tại bãi biển đang chờ bạn thử khám phá, sẽ giúp bạn có những giây phút thư giãn tuyệt vời</p>
                     </div>
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
                 </div>
+
                 <div class="tour--item">
                     <div class="tour--item-pic">
                         <img src="/img/home/6b_VT.png" alt="">
@@ -100,7 +111,8 @@
                             </div>
                         </div>
 
-                        <p class="title-script">Đến với Vũng Tàu bạn sẽ có thể nô đùa với những con sóng biển và đồng thời có được cảm giác bình yên, dễ chịu với những con đường rộng rãi, thoáng đãng. Dưới là biển xanh, trên là những ngọn núi to, núi nhỏ, cùng những ngôi chùa thanh tịnh… Tất cả tạo nên một Vũng Tàu đầy cuốn hút, một thành phố Vũng Tàu không chỉ hiền hòa bình dị mà còn vô vàn những danh lam thắng cảnh nổi tiếng.</p>
+                        <p class="title-script">Đến với Vũng Tàu bạn sẽ có thể nô đùa với những con sóng biển và đồng thời có được cảm giác bình yên, dễ chịu với những con đường rộng rãi, thoáng đãng. Dưới là biển xanh, trên là những ngọn núi to, núi nhỏ, cùng những ngôi chùa
+                            thanh tịnh… Tất cả tạo nên một Vũng Tàu đầy cuốn hút, một thành phố Vũng Tàu không chỉ hiền hòa bình dị mà còn vô vàn những danh lam thắng cảnh nổi tiếng.</p>
                     </div>
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
@@ -120,7 +132,8 @@
                             </div>
                         </div>
 
-                        <p class="title-script">Đà Lạt là một trong những địa điểm du lịch nổi tiếng thuộc tỉnh Lâm Đồng, Tây Nguyên. Thành phố được gọi với cái tên mỹ miều “thành phố ngàn hoa” vì cảnh sắc thiên nhiên tươi đẹp và khí hậu ôn hòa, mát mẻ. Nếu đang có ý định du lịch tại vùng đất này, bạn nên trang bị những kiến thức cần thiết để có trải nghiệm đáng nhớ và tuyệt vời nhất.</p>
+                        <p class="title-script">Đà Lạt là một trong những địa điểm du lịch nổi tiếng thuộc tỉnh Lâm Đồng, Tây Nguyên. Thành phố được gọi với cái tên mỹ miều “thành phố ngàn hoa” vì cảnh sắc thiên nhiên tươi đẹp và khí hậu ôn hòa, mát mẻ. Nếu đang có ý định du
+                            lịch tại vùng đất này, bạn nên trang bị những kiến thức cần thiết để có trải nghiệm đáng nhớ và tuyệt vời nhất.</p>
                     </div>
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
@@ -140,7 +153,8 @@
                             </div>
                         </div>
 
-                        <p class="title-script">Phú Quốc may mắn được thiên nhiên ưu đãi với làn nước trong, bờ cát trắng mịn, và những khu rừng hoang sơ. Cái nắng dịu nhẹ ở Bãi Dài phía tây Phú Quốc và Bãi Sao phía đông Phú Quốc. Du lịch Phú Quốc không chỉ có biển, hãy thử các trải nghiệm thú vị khác như khám phá hòn đảo bằng xe máy, tham quan công viên bảo tồn động vật Vinpearl Safari hay chèo thuyền kayak. Và lặn biển ngắm những bãi san hô đẹp tuyệt vời</p>
+                        <p class="title-script">Phú Quốc may mắn được thiên nhiên ưu đãi với làn nước trong, bờ cát trắng mịn, và những khu rừng hoang sơ. Cái nắng dịu nhẹ ở Bãi Dài phía tây Phú Quốc và Bãi Sao phía đông Phú Quốc. Du lịch Phú Quốc không chỉ có biển, hãy thử
+                            các trải nghiệm thú vị khác như khám phá hòn đảo bằng xe máy, tham quan công viên bảo tồn động vật Vinpearl Safari hay chèo thuyền kayak. Và lặn biển ngắm những bãi san hô đẹp tuyệt vời</p>
                     </div>
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
@@ -160,7 +174,8 @@
                             </div>
                         </div>
 
-                        <p class="title-script">Được biết đến là một trong những ngọn núi cao nhất ở xứ An Giang, nằm trong dãy Thất Sơn, núi Cô Tô còn có cái tên khá mỹ miều là Phụng Hoàng Sơn. Từ đỉnh Cô Tô, bạn có thể ngắm trọn vẹn khung cảnh thiên nhiên hoang sơ, trù phú của mảnh đất hữu tình này. Núi Cô Tô cũng chính là nơi ngắm hoàng hôn lý tưởng nhất ở An Giang, hay xa xa là biên giới của nước bạn Campuchia tưởng chừng như rất gần.</p>
+                        <p class="title-script">Được biết đến là một trong những ngọn núi cao nhất ở xứ An Giang, nằm trong dãy Thất Sơn, núi Cô Tô còn có cái tên khá mỹ miều là Phụng Hoàng Sơn. Từ đỉnh Cô Tô, bạn có thể ngắm trọn vẹn khung cảnh thiên nhiên hoang sơ, trù phú
+                            của mảnh đất hữu tình này. Núi Cô Tô cũng chính là nơi ngắm hoàng hôn lý tưởng nhất ở An Giang, hay xa xa là biên giới của nước bạn Campuchia tưởng chừng như rất gần.</p>
                     </div>
                     <div class="btn-detail btn-medium btn"><a href="./detail.html">Details</a>
                     </div>
@@ -173,20 +188,20 @@
             </div>
         </div>
         <div class="page__content">
-            <div class="page__content--review" >
+            <div class="page__content--review">
                 <div>
                     <p style="text-align: center;">Đại Nội Huế</p>
-                <p>     Đại Nội Huế chính là nơi sinh hoạt và diễn ra các hoạt động của vua chúa Nguyễn cùng triều đình phong kiến cuối cùng của nước ta.
-
-                    Đại Nội Huế có thể xem là một công trình có quy mô đồ sộ nhất trong lịch sử Việt Nam từ trước đến nay. Đại Nội Huế có quá trình xây dựng kéo dài trong nhiều năm với hàng vạn người thi công cùng hàng loạt các công việc như lấp sông, đào hào, đắp thành, bên cạnh đó là khối lượng đất đá khổng lồ lên đến hàng triệu mét khối.
-               </p>
-               <p style="text-align: right;">người đấu tên</p>
+                    <p> Đại Nội Huế chính là nơi sinh hoạt và diễn ra các hoạt động của vua chúa Nguyễn cùng triều đình phong kiến cuối cùng của nước ta. Đại Nội Huế có thể xem là một công trình có quy mô đồ sộ nhất trong lịch sử Việt Nam từ trước đến nay.
+                        Đại Nội Huế có quá trình xây dựng kéo dài trong nhiều năm với hàng vạn người thi công cùng hàng loạt các công việc như lấp sông, đào hào, đắp thành, bên cạnh đó là khối lượng đất đá khổng lồ lên đến hàng triệu mét khối.
+                    </p>
+                    <p style="text-align: right;">người đấu tên</p>
                 </div>
                 <div>
                     <p style="text-align: center;">Nha Trang</p>
-                <p>    Được mệnh danh là thiên đường của miền nhiệt đới, Vinpearl Land – nơi du khách được đắm mình giữa thiên nhiên, tắm trong nắng, hòa cùng gió, đùa vui với sóng và cảm nhận từng chi tiết vẻ đẹp của du lịch vùng biển Nha Trang – Khánh Hòa. Lựa chọn di lịch Nha Trang Là một lựa chọn sáng suốt
-               </p>
-               <p style="text-align: right;">người đấu tên</p>
+                    <p> Được mệnh danh là thiên đường của miền nhiệt đới, Vinpearl Land – nơi du khách được đắm mình giữa thiên nhiên, tắm trong nắng, hòa cùng gió, đùa vui với sóng và cảm nhận từng chi tiết vẻ đẹp của du lịch vùng biển Nha Trang – Khánh
+                        Hòa. Lựa chọn di lịch Nha Trang Là một lựa chọn sáng suốt
+                    </p>
+                    <p style="text-align: right;">người đấu tên</p>
                 </div>
             </div>
         </div>
@@ -279,4 +294,3 @@
 </body>
 
 </html>
-
